<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/carMakeIdentifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identify_the_car_make"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />

    <Button
        android:id="@+id/hintsButton"
        android:layout_width="219dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:text="@string/hints"
        app:layout_constraintBottom_toTopOf="@+id/carMakeImageButton"
        app:layout_constraintEnd_toEndOf="@+id/carMakeIdentifyButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/carMakeIdentifyButton"
        app:layout_constraintTop_toBottomOf="@+id/carMakeIdentifyButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/carMakeImageButton"
        android:layout_width="225dp"
        android:layout_height="47dp"
        android:text="@string/identify_the_car_image"
        app:layout_constraintBottom_toTopOf="@+id/advancedLevelButton"
        app:layout_constraintEnd_toEndOf="@+id/carMakeIdentifyButton"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="@+id/carMakeIdentifyButton"
        app:layout_constraintTop_toBottomOf="@+id/carMakeIdentifyButton"
        app:layout_constraintVertical_bias="0.794" />

    <Button
        android:id="@+id/advancedLevelButton"
        android:layout_width="225dp"
        android:layout_height="47dp"
        android:text="@string/advanced_level"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/carMakeIdentifyButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/carMakeIdentifyButton"
        app:layout_constraintTop_toBottomOf="@+id/carMakeIdentifyButton"
        app:layout_constraintVertical_bias="0.824" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/countdown"
        app:layout_constraintBottom_toTopOf="@+id/carMakeIdentifyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />
</androidx.constraintlayout.widget.ConstraintLayout>